# freesiege

./: .gitignore  CMakeLists.txt  COPYING_ARTWORK  Doxyfile  HEADER  README  anim.h  anims.cfg  arrow.h  background.cpp  background.h  ball.h  battlefield.cpp  battlefield.h  board.h  catapult.cpp  combi.cfg  combinaisoncollection.h  combinaisonscreen.cpp  dragon.h  druid.cpp  explosion.h  fight.cpp  flame.cpp  freesiege.cpp  gamescreen.cpp  golem.cpp  knight.cpp  knight.h  lifebar.h  menuscreen.h  message.h  musics.cfg  plant.cpp  plateformSDL.h  soldier.cpp  spritecollection.cpp  sprites.cfg  stone.cpp  stone.h  (+5 more)
common/: CMakeLists.txt  config.h  options.cpp  options.h  param.h  utils.cpp  utils.h
engine/: CMakeLists.txt  anim.cpp  anim.h  collisionmatrix.cpp  collisionmatrix.h  combinaison.cpp  combinaison.h  combinaisoncollection.cpp  combinaisoncollection.h  message.cpp  message.h  musiccollection.cpp  musiccollection.h  sprite.cpp  sprite.h  spritecollection.cpp  spritecollection.h
gui/: CMakeLists.txt  background.cpp  background.h  battlefield.cpp  battlefield.h  board.cpp  board.h  combinaisonscreen.cpp  combinaisonscreen.h  foreground.cpp  foreground.h  gamescreen.cpp  gamescreen.h  lifebar.cpp  lifebar.h  menu.cpp  menu.h  menuscreen.cpp  menuscreen.h  trainingscreen.cpp  trainingscreen.h
units/: CMakeLists.txt  archer.cpp  archer.h  arrow.cpp  ball.cpp  ball.h  catapult.h  dragon.cpp  dragon.h  druid.cpp  druid.h  explosion.cpp  explosion.h  flame.cpp  flame.h  golem.cpp  golem.h  knight.cpp  knight.h  plant.cpp  plant.h  ram.cpp  ram.h  soldier.cpp  soldier.h  unit.cpp  unit.h  veteran.cpp  veteran.h
units_unused/: archer.cpp  arrow.cpp
xcf/: background.xcf  ball.xcf  castle.xcf  cloud.xcf  dragon.xcf  dragon_fly.xcf  druid.xcf  druid_unit.xcf  fire.xcf  free.xcf  golem.xcf  golem_fight.xcf  golem_walk.xcf  hand.xcf  knight.xcf  knight_walking.xcf  lifebar_border.xcf  lifebar_element.xcf  loading.xcf  logo.xcf  magic.xcf  marion.xcf  plant.xcf  ram.xcf  ram_sprite.xcf  select.xcf  siege.xcf  skull.xcf  soldier.xcf  soldier_fight.xcf  soldier_walking.xcf  steel.xcf  sun.xcf  titre.xcf  titre2.xcf  units_110x110.xcf  units_110x350.xcf  units_50x230.xcf  veteran.xcf  wood.xcf
