PROJECT(freesiege)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

INCLUDE(${CMAKE_ROOT}/Modules/FindSDL.cmake)
INCLUDE(${CMAKE_ROOT}/Modules/FindSDL_mixer.cmake)
INCLUDE(${CMAKE_ROOT}/Modules/FindSDL_ttf.cmake)
INCLUDE(${CMAKE_ROOT}/Modules/FindOpenGL.cmake)

INCLUDE_DIRECTORIES(${SDL_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${SDLMIXER_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${SDLTTF_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})

INCLUDE(common/CMakeLists.txt)
INCLUDE(engine/CMakeLists.txt)
INCLUDE(gui/CMakeLists.txt)
INCLUDE(units/CMakeLists.txt)

SET(FS_ALL_SRCS
    ${FS_COMMON_SRCS}
    ${FS_ENGINE_SRCS}
    ${FS_GUI_SRCS}
    ${FS_UNITS_SRCS}
)

OPTION(COMPILE_FOR_PACKAGE "Assume Freesiege will be installed to /usr/bin and /usr/share" OFF)
IF(COMPILE_FOR_PACKAGE)
	ADD_DEFINITIONS(-DFREESIEGE_ISINSTALLED)
ENDIF(COMPILE_FOR_PACKAGE)

ADD_EXECUTABLE(fight fight.cpp ${FS_ALL_SRCS})
TARGET_LINK_LIBRARIES(fight  ${SDLMIXER_LIBRARY} ${SDL_LIBRARY} ${SDLTTF_LIBRARY} ${OPENGL_gl_LIBRARY})

ADD_EXECUTABLE(freesiege freesiege.cpp ${FS_ALL_SRCS})
TARGET_LINK_LIBRARIES(freesiege ${SDLMIXER_LIBRARY} ${SDL_LIBRARY} ${SDLTTF_LIBRARY} ${OPENGL_gl_LIBRARY})
